--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
 h1 {
   font-family: san-serif;
 }
-
-
+h2 {
+  font-family: cursive;
+}
+h3 {
+  font-family: fantasy;
+}
 
 /* Flexible images */
 
