--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-background-color:rgba(50, 115, 220, 0.3);
+body {
+  background-color:rgba(50, 115, 220, 0.3);
+}
 h1 {
   font-family: san-serif;
 }
