--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ h2 {
 p {
   font-family: sans-serif;
   font: verdana;
+}
+address {
+  fon-family: sans-serif;
+  font: verdana;
+}
 
 /* Flexible images */
 
