--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,12 @@ body {
 h1 {
   font-family: sans-serif;
   font: verdana;
+  color: blue;
 }
 h2 {
   font-family: sans-serif;
   font: verdana;
+  color: blue;
 }
 p {
   font-family: sans-serif;
