--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,14 @@ body {
 h1 {
   font-family: sans-serif;
   font: verdana;
-  color: blue;
 }
 h2 {
   font-family: sans-serif;
   font: verdana;
-  color: blue;
 }
+h3 {
+  font-family: sans-serif;
+  font: verdana;
 p {
   font-family: sans-serif;
   font: verdana;
