--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 h1 {
   font-family: sans-serif;
   font: verdana;
-  color: blue;
+  color: rgb(24, 62, 150);
 }
 h2 {
   font-family: sans-serif;
