--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ h1 {
 h2 {
   font-family: sans-serif;
   font: arial-black;
-  color: blue;
+  color: rgb(24, 62, 150);
 }
 h3 {
   font-family: sans-serif;
