--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,13 @@ h1 {
 h2 {
   font-family: sans-serif;
   font: Tahoma;
+  font-size: 20px;
   color: rgb(0, 55, 183);
 }
 h3 {
   font-family: sans-serif;
   font: verdana;
+   font-size: 20px;
 p {
   font-family: sans-serif;
   font: verdana;
