--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,14 @@ h1 {
   font-family: sans-serif;
   font: Tahoma;
   font-size: 20px;
+  font-weight: bold;
   color: rgb(0, 55, 183);
 }
 h2 {
   font-family: sans-serif;
   font: Tahoma;
   font-size: 20px;
+  font-weight: bold;
   color: rgb(0, 55, 183);
 }
 h3 {
