--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 h1 {
   font-family: sans-serif;
   font: Tahoma;
-  font-size: 100px;
+  font-size: large;
   font-weight: bold;
   color: rgb(0, 55, 183);
   border-color: blue
