--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h1 {
 h2 {
   font-family: sans-serif;
   font: Tahoma;
-  font-size: 100px;
+  font-size: large;
   font-weight: bold;
   color: rgb(0, 55, 183);
 }
