--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 h1 {
   font-family: sans-serif;
   font: Tahoma;
-  font-size: large;
+  font-size: xx-large;
   font-weight: bold;
   color: rgb(0, 55, 183);
   border-color: blue
@@ -12,7 +12,7 @@ h1 {
 h2 {
   font-family: sans-serif;
   font: Tahoma;
-  font-size: large;
+  font-size: xx-large;
   font-weight: bold;
   color: rgb(0, 55, 183);
 }
