--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ body {
   background-color:rgb(255, 255, 233);
 }
 h1 {
-  font-family: sans-serif;
-  font: Tahoma;
+  font-family: serif;
+  font: rockwell;
   font-size: xx-large;
   font-weight: bold;
   color: rgb(0, 55, 183);
