--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body {
   background-color:rgb(255, 255, 233);
-  margin: 30px;
 }
 h1 {
   font-family: serif;
@@ -24,6 +23,7 @@ h3 {
 p {
   font-family: sans-serif;
   font: verdana;
+   padding:60px;
 }
 <address> {
   fon-family: sans-serif;
