--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 h1 {
   font-family: serif;
   font: rockwell;
-  font-size: xx-large;
+  font-size: 50px;
   font-weight: bold;
   color: rgb(0, 55, 183);
   border-color: blue
