--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   background-color:rgb(255, 255, 233);
   padding:60px;
+  border-width: 4px;
 }
 h1 {
   font-family: serif;
@@ -8,7 +9,7 @@ h1 {
   font-size: 50px;
   font-weight: bold;
   color: rgb(0, 55, 183);
-  border-color: blue
+  border-color: blue;
 }
 h2 {
   font-family: sans-serif;
@@ -16,6 +17,7 @@ h2 {
   font-size: xx-large;
   font-weight: bold;
   color: rgb(0, 55, 183);
+  box-sizing: content-box;
 }
 h3 {
   font-family: sans-serif;
