--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ h3 {
   font-family: sans-serif;
   font: verdana;
    font-size: 20px;
+h4 {
+  font-family: sans-serif;
+  font: verdana;
+   font-size: 20px;
 p {
   font-family: sans-serif;
   font: verdana;
