--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ h2 {
 }
 h3 {
   font-family: sans-serif;
-  font: verdana;
+  font: bookman;
    font-size: 20px;
 h4 {
   font-family: sans-serif;
