--- a/css/main.css
+++ b/css/main.css
@@ -13,28 +13,25 @@ h1 {
   border-color: blue;
 }
 h2 {
-  font-family: sans-serif;
-  font: Tahoma;
+  font-family: serif;
   font-size: xx-large;
   font-weight: bold;
   color: rgb(0, 55, 183);
   box-sizing: content-box;
 }
 h3 {
-  font-family: sans-serif;
-  font: bookman;
+  font-family: serif;
    font-size: 20px;
+}
 h4 {
-  font-family: sans-serif;
-  font: verdana;
+  font-family: serif;
    font-size: 20px;
+}
 p {
-  font-family: sans-serif;
-  font: verdana;
+  font-family: serif;
 }
 <a> {
-  fon-family: sans-serif;
-  font: verdana;
+  fon-family: serif;
 }
 
 /* Flexible images */
