--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ body {
 }
 h1 {
   font-family: serif;
-  font: rockwell;
   font-size: 50px;
   font-weight: bold;
   color: rgb(0, 55, 183);
@@ -30,7 +29,7 @@ h4 {
 p {
   font-family: serif;
 }
-<a> {
+a {
   fon-family: serif;
 }
 
