--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@ h4 {
    font-size: 20px;
 }
 p {
-  font-family: cursive;
-  color: blue;
+  font-family: monospace;
+  color: brown;
 }
 a {
   font-family: sans-serif;
