--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@ p {
 a {
   font-family: sans-serif;
 }
+address {
+  font-family: sans-serif;
+  font-size: x-small;
+}
 
 /* Flexible images */
 
