--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ h4 {
 }
 p {
   font-family: monospace;
-  font-size: small;
+  font-size: medium;
   color: brown;
 }
 a {
@@ -35,7 +35,8 @@ a {
 }
 address {
   font-family: sans-serif;
-  font-size: x-small;
+  font-size: small;
+  color: black;
 }
 
 /* Flexible images */
