--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   background-color:rgb(255, 255, 233);
-  margin-left: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 h1 {
   font-family: serif;
