--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ p {
 a {
   font-family: sans-serif;
   font-size: large;
-  color: navy;
+  color: blue;
 }
 address {
   font-family: sans-serif;
