--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ h2 {
 h3 {
   font-family: sans-serif;
   font-size: 20px;
-  color: pink
+  color: rgb(204, 102,0);
 }
 h4 {
   font-family: sans-serif;
