--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ h2 {
 h3 {
   font-family: sans-serif;
   font-size: 20px;
-  color: rgb(204, 102,0);
+  color: rgb(204, 102, 0);
 }
 h4 {
   font-family: sans-serif;
@@ -29,7 +29,7 @@ h4 {
 p {
   font-family: monospace;
   font-size: medium;
-  color: brown;
+  color: rgb(102, 51, 0);
 }
 a {
   font-family: sans-serif;
