--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,7 @@ h1 {
   font-family: serif;
   font-size: 50px;
   font-weight: bold;
-  color: rgb(0, 55, 183);
-  border-color: blue;
+  color: rgb(0, 51, 153);
 }
 h2 {
   font-family: sans-serif;
@@ -28,13 +27,13 @@ h4 {
 }
 p {
   font-family: monospace;
-  font-size: medium;
+  font-size: large;
   color: rgb(102, 51, 0);
 }
 a {
   font-family: sans-serif;
   font-size: large;
-  color: blue;
+  color: rgb(0, 51, 153);
 }
 address {
   font-family: sans-serif;
