--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ a {
 address {
   font-family: sans-serif;
   font-size: small;
-  color: black;
+  color: rgb(177, 134, 79);
 }
 
 /* Flexible images */
